--- a/Web.Statu/Views/Osoba/_osobaLayout.cshtml
+++ b/Web.Statu/Views/Osoba/_osobaLayout.cshtml
@@ -14,6 +14,16 @@
 
     HlidacStatu.Lib.Data.Relation.AktualnostType? aktualnost = ViewBag.Aktualnost;
 }
+@section metatags
+{
+
+    @if (Model.osoba != null && HlidacStatu.Web.Controllers.HomeController.DontIndexOsoby.Contains(Model.osoba.NameId.ToLower())
+                //|| (Model.osoba != null && Model.osoba.NotInterestingToShow() )
+        )
+    {
+        <meta name="robots" content="noindex, noarchive">
+    }
+}
 @section breadcrumb
 {
     <ol class="breadcrumb">
