--- a/Web.Statu/Views/Home/Index.cshtml
+++ b/Web.Statu/Views/Home/Index.cshtml
@@ -126,7 +126,7 @@
                 <div class="watcher__title">
                     <img src="/Content/img/icon-person-watcher.svg">
                     <h2 class="new-title">
-                        <a href="/kindex">Co je K-Index</a>
+                        <a href="/kindex">K-Index</a>
                     </h2>
                 </div>
 
@@ -134,14 +134,19 @@
                     <p class="muted">
                         <a href="/kindex">Index klíčových rizik</a> - zkráceně K–Index, je ukazatel míry rizikových faktorů. Tyto faktory jsou spojovány s rizikem korupce a nehospodárným nakládáním veřejných peněz.
                     </p>
+                    @Html.Partial("~/Views/Kindex/_SearchForm.cshtml")
                     <p>
                         <a href="/kindex">
                             <img src="/content/Img/kindex-info.png" style="width:80%;" title="Popis K-Indexu" />
                         </a>
                     </p>
+                    <div class="row">
+                        <a href="@HlidacStatu.Lib.Analysis.KorupcniRiziko.KIndexData.GetKratkaMetodikaURL()" class="btn btn-default">Co je K-Index</a>
+                        <a href="@HlidacStatu.Lib.Analysis.KorupcniRiziko.KIndexData.GetMetodikaURL()" class="btn btn-default" style="margin-left:10px">Metodika</a>
+                    </div>
                     <p>
                         <a href="https://texty.hlidacstatu.cz/k-index/">S podporou Active Citizens Fund a Norských fondů.</a><a href="https://texty.hlidacstatu.cz/k-index-watchdog-bravely-monitors-public-corruption/"><img src="/Content/Img/en.png" style="height:13px;width:20px;vertical-align:baseline" /></a>
-                        <a href="https://texty.hlidacstatu.cz/k-index/"><img src="/Content/Img/acf.jpg" style="width:90%;height:auto;" /></a>
+                        <a href="https://texty.hlidacstatu.cz/k-index/"><img src="/Content/Img/acf.jpg" style="width:80%;height:auto;" /></a>
                     </p>
                 </div>
             </div>
