--- a/Web.Statu/Views/Subjekt/RightColumn.cshtml
+++ b/Web.Statu/Views/Subjekt/RightColumn.cshtml
@@ -63,8 +63,11 @@
                     <p class="py-0 my-0 text-muted">Zastupovaný</p>
                     @foreach (var os in rppOs)
                     {
-                        <p class="py-0 my-0 lead">@($"{os.fyzickaOsoba.jmeno.Capitalize()} {os.fyzickaOsoba.prijmeni.Capitalize()}")</p>
-                        <p class="py-0 my-0 text-muted small">změna @(os.fyzickaOsoba.datumPosledniZmeny?.ToString("dd.MM.yyyy"))</p>
+                        @if (os?.fyzickaOsoba != null)
+                        {
+                            <p class="py-0 my-0 lead">@($"{os?.fyzickaOsoba?.jmeno?.Capitalize()} {os?.fyzickaOsoba?.prijmeni?.Capitalize()}")</p>
+                            <p class="py-0 my-0 text-muted small">změna @(os?.fyzickaOsoba?.datumPosledniZmeny?.ToString("dd.MM.yyyy"))</p>
+                        }
                     }
                 </div>
             }
